Second commit. Fixed some overflow and animation problems.

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 .book {
     position: relative;
     width: 27em;
-    height: 32em;
+    height: 36em;
     color: #0d0210;
     transform-style: preserve-3d;
     transform: rotateX(25deg) rotateY(0deg) rotateZ(-10deg);
@@ -49,7 +49,6 @@ body {
 .front {
     z-index: 1;
     backface-visibility: hidden;
-    border-left: 3px solid powderblue;
 }
 
 .back {
@@ -71,7 +70,7 @@ body {
 
 .side {
     width: 4em;
-    height: 32em;
+    height: 36em;
     background: #473844;
     position: absolute;
     left: -4em;
@@ -93,7 +92,7 @@ body {
 
 .bottom-cover {
     width: 27em;
-    height: 32em;
+    height: 36em;
     background-color: #866a80;
     position: absolute;
     top: -0.2em;
@@ -172,7 +171,99 @@ i {
     z-index: 1;
 }
 
+/* PAGES STYLING */
+
+.header-section {
+    display: flex;
+    gap: 1em;
+    text-align: center;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+h2 {
+    font-size: 2em;
+}
+
+
+
+#b1, #b2, #b3, #b4, #b5 {
+    border-right: 3px solid powderblue;
+}
+
+
+/* FRONT COVER STYLE */
+
 #f1 {
+    background-color: #866a80;
+    font-family: 'Grenze Gotisch', serif;
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #fffbff;
+}
+
+/* HERO STYLE */
+
+#f2 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-family: sans-serif;
+    text-align: center;
+    align-content: center;
+}
+
+/* SECTION SKILLS STYLE */
+
+#f3 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: sans-serif;
+}
+
+.skills-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1.5em;
+}
+
+/* SECTION PROYECTS STYLE */
+
+#f4 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    font-family: sans-serif;
+}
+
+.proyects-container {
+    display: none;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1.5em;
+}
+
+/* SECTION CONTACT STYLE */
+
+#f5 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    font-family: sans-serif;
+}
+
+.form-container {
+    width: 90%;
+}
+
+#b1 {
     background-color: #866a80;
 }
 
